--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "hoist-non-react-statics": "^3.3.0",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-navigation": "^3.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
